namespace EasySave.EasyLog.Options
{
    public enum LogFormat
    {
        Json,
        Xml
    }
}
